--- a/index.html
+++ b/index.html
@@ -62,4 +62,11 @@
   </footer>
 
 </body>
+<script type="module">
+  import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+  Chatbot.init({
+      chatflowid: "5fcffd35-4000-4e40-9996-06963cb387ef",
+      apiHost: "https://flowise-ecea.onrender.com",
+  })
+</script>
 </html>
