--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <h1>Haq Security AI</h1>
   <p>To get started, click on the icon in the bottom right.</p>
-  <!-- <p>If you would like a chatbot for your business, please email <a class="email-link" href="mailto:chatbot@haqsecurity.com">chatbot@haqsecurity.com</a></p> -->
+  <p>If you would like a chatbot for your business, please email <a class="email-link" href="mailto:chatbot@haqsecurity.com">chatbot@haqsecurity.com</a></p>
 
   <footer>
     &copy; 2025 Haq Security AI. All rights reserved.
