--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
 
 </body>
 <script type="module">
-  import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
-  Chatbot.init({
-      chatflowid: "5fcffd35-4000-4e40-9996-06963cb387ef",
-      apiHost: "https://flowise-ecea.onrender.com",
-  })
-</script>
-  <script type="module">
     import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
     Chatbot.init({
         chatflowid: "5fcffd35-4000-4e40-9996-06963cb387ef",
-        apiHost: "https://flowise-ecea.onrender.com",
+        apiHost: "https://aidev.haqsecurity.com",
+    })
+</script>
+ <script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "5fcffd35-4000-4e40-9996-06963cb387ef",
+        apiHost: "https://aidev.haqsecurity.com",
         chatflowConfig: {
             /* Chatflow Config */
         },
