--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         },
         theme: {
             button: {
-                backgroundColor: '#3B81F6',
+                backgroundColor: '#00ffe1',
                 right: 20,
                 bottom: 20,
                 size: 48,
                 dragAndDrop: true,
-                iconColor: 'white',
+                iconColor: '#0f0f0f',
                 customIconSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
                 autoWindowOpen: {
                     autoOpen: true,
@@ -105,8 +105,8 @@
                 titleAvatarSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
                 welcomeMessage: 'Hello! How can I help?',
                 errorMessage: 'This is a custom error message',
-                backgroundColor: '#ffffff',
-                backgroundImage: 'enter image path or link',
+                backgroundColor: '#1a1a2e',
+                backgroundImage: '',
                 height: 700,
                 width: 400,
                 fontSize: 16,
@@ -119,22 +119,22 @@
                 sourceDocsTitle: 'Sources:',
                 renderHTML: true,
                 botMessage: {
-                    backgroundColor: '#f7f8ff',
-                    textColor: '#303235',
+                    backgroundColor: '#2a2a40',
+                    textColor: '#00ffe1',
                     showAvatar: true,
                     avatarSrc: 'https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/parroticon.png'
                 },
                 userMessage: {
-                    backgroundColor: '#3B81F6',
-                    textColor: '#ffffff',
+                    backgroundColor: '#00ffe1',
+                    textColor: '#0f0f0f',
                     showAvatar: true,
                     avatarSrc: 'https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/usericon.png'
                 },
                 textInput: {
                     placeholder: 'Type your question',
-                    backgroundColor: '#ffffff',
-                    textColor: '#303235',
-                    sendButtonColor: '#3B81F6',
+                    backgroundColor: '#0f0f0f',
+                    textColor: '#e0e0e0',
+                    sendButtonColor: '#00ffe1',
                     maxChars: 50,
                     maxCharsWarningMessage: 'You exceeded the characters limit. Please input less than 50 characters.',
                     autoFocus: true,
@@ -144,14 +144,14 @@
                     receiveSoundLocation: 'receive_message.mp3'
                 },
                 feedback: {
-                    color: '#303235'
+                    color: '#00ffe1'
                 },
                 dateTimeToggle: {
                     date: true,
                     time: true
                 },
                 footer: {
-                    textColor: '#303235',
+                    textColor: '#888',
                     text: 'Powered by',
                     company: 'Haq Security',
                     companyLink: 'https://ai.haqsecurity.com'
@@ -160,5 +160,6 @@
         }
     })
 </script>
+
 
 </html>
